PAY-7444: Scheduled Jobs Upgrades to run fortify     [PAY-7444] (https://tools.hmcts.net/jira/browse/PAY-7444).